--- a/slurm.conf
+++ b/slurm.conf
@@ -100,7 +100,7 @@ FastSchedule=1
 SchedulerType=sched/backfill
 SchedulerPort=7321
 SelectType=select/cons_res
-#SelectTypeParameters=
+SelectTypeParameters=CR_CORE
 # 
 # 
 # JOB PRIORITY 
