--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
 sgn_local.conf
+repos
+sgn
+cxgn-corelibs
+local-lib
+R_libs
+Phenome
+rPackages
+biosource
+Cview
+ITAG
+tomato_genome
+Chado
+sgn-devtools
+starmachine
+cassava
+sweetpotatobase
+ricebase
+citrusgreening
+coconut
+cassbase
+musabase
+potatobase
+cea
+cippotatobase
+fernbase
+solgenomics
+panzeabase
+varitome
+milkweed
+erysimum
+vitisbase
+panandbase
+triticum
+
 !Build/
 .last_cover_stats
 /META.yml
