--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   breedbase:
-    image: breedbase/breedbase:latest
+    image: breedbase/breedbase:dev
     depends_on:
       - breedbase_db
     container_name: breedbase_web
@@ -12,11 +12,20 @@ services:
       - type: bind
         source: ./sgn_local.conf
         target: /home/production/cxgn/sgn/sgn_local.conf
+      - type: bind
+        source: ../sgn
+        target: /home/production/cxgn/sgn
+      - type: bind
+        source: ../archive
+        target: /home/production/archive
+      - type: bind
+        source: ../skins
+        target: /home/production/cxgn/skins
+    environment:
+      MODE: 'DEVELOPMENT'
   breedbase_db:
     image: breedbase/pg:latest
     container_name: breedbase_db
-    ports:
-      - 5432:5432
     volumes:
       - "dbdata:/var/lib/postgresql/data"
 
