--- a/sgn_local.conf.template
+++ b/sgn_local.conf.template
@@ -1,25 +1,25 @@
-dbhost <dbhost>
-dbname <dbname>
+dbhost breedbase_db
+dbname breedbase
 dbuser web_usr
 dbpass <password>
-	
+
 rootpath /home/production/cxgn
 basepath /home/production/cxgn/sgn
-	
+
 composable_cvs trait,toy
 composable_cvs_allowed_combinations Time Series|trait+toy
-	
+
 homepage_files_dir        /home/production/public/static_content
-	
+
 trial_download_logfile /home/production/logs/cassava_trial_download_log
-	
+
 disable_login 0
-	
+
 www_user www-data
 www_group www-data
-	
+
 preferred_species Manihot esculenta
-	
+
 production_server 0
 image_dir /images/image_files_test
 image_path /home/production/public/images/image_files_test
@@ -28,27 +28,27 @@ tempfiles_base /home/production/tmp/breedbase-site
 static_datasets_path /home/production/public
 static_content_url  /static_content
 static_content_path /home/production/public/static_content
-	
+
 main_production_site_url https://breedbase.org
-	
+
 # github token for contact form
 github_access_token 96d462a40bc3504f4768559e752f7eec16ff2bc1
-	
+
 #Homepage controller customization
 homepage_display_phenotype_uploads 0
-	
+
 # jbrowse path
 jbrowse_path              /jbrowse_cassavabase/?data=data/json
-	
+
 #path for archving uploaded files
 archive_path    /home/production/archive/breedbase/
-	
+
 default_genotyping_protocol "GBS ApeKI Cassava genome v6_Oct2015"
 #default_genotyping_protocol "GBS ApeKI Cassava genome v5"
-	
+
 identifier_prefix BB
 project_name "breeDBase"
-cview_db_backend Cassava        
+cview_db_backend Cassava
 backend Slurm
 solgs_dir        /home/production/tmp/solgs/__USERNAME__
 trait_ontology_db_name CO_334
@@ -57,27 +57,27 @@ trait_ontology_db_name CO_334
 onto_root_namespaces  CO_334 (Cassava Trait Ontology), GO (Gene Ontology), PO (Plant Ontology), SO (Sequence Ontology), PATO (Phenotype and Trait Ontology)
 #For display on trait search
 trait_variable_onto_root_namespaces CO_334 (Cassava Ontology), COMP (Composed Variables)
-	
-<Controller::Cview>     
+
+<Controller::Cview>
         cview_default_map_id 1
 </Controller::Cview>
-	
+
 r_qtl_temp_path /export/prod/tmp/solqtl___USERNAME__
-	
+
 image_path                /home/production/public/images
 submit_dir                /home/production/public/submit-uploads
-	
+
 blast_path                ""
 blast_db_path             /home/production/blast/databases/current
-	
+
 # path to our production_ftp site
 #
 ftpsite_root              /home/production/public
-	
+
 <View::Mason>
 #       add_comp_root /home/production/cxgn/cassava/mason
 </View::Mason>
-	
+
 <DatabaseConnection sgn_test>
   dsn dbi:Pg:host=localhost;dbname=cxgn
   user postgres
@@ -97,4 +97,3 @@ ftpsite_root              /home/production/public
   search_path gem
 
 </DatabaseConnection>
-	
