--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,44 @@ version: "3.7"
 
 services:
   breedbase:
-    image: breedbase/breedbase:latest
+    image: breedbase/breedbase:v0.8
     depends_on:
       - breedbase_db
     container_name: breedbase_web
     ports:
       - 7080:8080
+      - 25:25
     volumes:
       - type: bind
-        source: ./sgn_local.conf
+        source: $HOME/sgn_local.conf
         target: /home/production/cxgn/sgn/sgn_local.conf
+#      - type: bind
+#        source: $HOME/empty_dump_20200313.sql
+#        target: /home/production/empty_dump_20200313.sql
+      - type: bind
+        source: $HOME/archive
+        target: /home/production/archive
+      - type: bind
+        source: $HOME/tmp
+        target: /home/production/tmp
+      - type: bind
+        source: $HOME/cache
+        target: /home/production/cache
+      - type: bind
+        source: $HOME/cluster
+        target: /home/production/cluster
+      - type: bind
+        source: $HOME/blast
+        target: /home/production/blast
+      - type: bind
+        source: $HOME/images
+        target: /home/production/images
   breedbase_db:
     image: breedbase/pg:latest
     container_name: breedbase_db
-    ports:
-      - 5432:5432
+#    ports:
+#      - 5431:5432
     volumes:
-      - "dbdata:/var/lib/postgresql/data"
-
-volumes:
-  dbdata:
-    name: bb_postgres
+      - type: bind
+        source: /home/production/pgdata
+        target: /var/lib/postgresql/data
