--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,28 +11,28 @@ services:
       - 25:25
     volumes:
       - type: bind
-        source: $HOME/sgn_local.conf
+        source: ${HOME}/sgn_local.conf
         target: /home/production/cxgn/sgn/sgn_local.conf
 #      - type: bind
-#        source: $HOME/empty_dump_20200313.sql
+#        source: ${HOME}/empty_dump_20200313.sql
 #        target: /home/production/empty_dump_20200313.sql
       - type: bind
-        source: $HOME/archive
+        source: ${HOME}/archive
         target: /home/production/archive
       - type: bind
-        source: $HOME/tmp
+        source: ${HOME}/tmp
         target: /home/production/tmp
       - type: bind
-        source: $HOME/cache
+        source: ${HOME}/cache
         target: /home/production/cache
       - type: bind
-        source: $HOME/cluster
+        source: ${HOME}/cluster
         target: /home/production/cluster
       - type: bind
-        source: $HOME/blast
+        source: ${HOME}/blast
         target: /home/production/blast
       - type: bind
-        source: $HOME/images
+        source: ${HOME}/images
         target: /home/production/images
   breedbase_db:
     image: breedbase/pg:latest
