adjust volume syntax

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,24 +12,12 @@ services:
       - type: bind
         source: ./repos
         target: /home/production/cxgn
-      - type: volume
-        source: archive
-        target: /home/production/archive
-      - type: volume
-        source: tmp
-        target: /home/production/tmp
-      - type: volume
-        source: cache
-        target: /home/production/cache
-      - type: volume
-        source: cluster
-        target: /home/production/cluster
-      - type: volume
-        source: blast
-        target: /home/production/blast
-      - type: volume
-        source: images
-        target: /home/production/images
+      - archive:/home/production/archive
+      - tmp:/home/production/tmp
+      - cache:/home/production/cache
+      - cluster:/home/production/cluster
+      - blast:/home/production/blast
+      - images:/home/production/images
     environment:
       MODE: 'DEVELOPMENT'
 
