--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,10 @@ version: "3.7"
 services:
   breedbase:
     image: breedbase/breedbase:v0.17
-    restart: always
     depends_on:
       - breedbase_db
     container_name: breedbase_web
 
   breedbase_db:
-    image: breedbase/breedbase_pg12.4:v0.5
-    restart: always
+    image: breedbase/pg:11
     container_name: breedbase_db
