--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
       - type: bind
         source: ./sgn_local.conf
         target: /home/production/cxgn/sgn/sgn_local.conf
+      - archive:/home/production/archive
+      - tmp:/home/production/tmp
+      - cache:/home/production/cache
+      - cluster:/home/production/cluster
+      - blast:/home/production/blast
+      - images:/home/production/images
     ports:
       - 7080:8080
       - 25:25
@@ -17,3 +23,14 @@ services:
   breedbase_db:
     image: breedbase/pg:11
     container_name: breedbase_db
+    volumes:
+      - dbdata:/var/lib/postgresql/data
+
+volumes:
+  archive:
+  tmp:
+  cache:
+  cluster:
+  blast:
+  images:
+  dbdata:
