--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - 7080:8080
       - 25:25
     volumes:
-#       - type: bind
-#         source: ${HOME}/sgn_local.conf
-#         target: /home/production/cxgn/sgn/sgn_local.conf
+      - type: bind
+        source: ${HOME}/sgn_local.conf
+        target: /home/production/cxgn/sgn/sgn_local.conf
 # #      - type: bind
 # #        source: ${HOME}/empty_dump_20200313.sql
 # #        target: /home/production/empty_dump_20200313.sql
