add environment variables to compose file and instructions to README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: "3.7"
 
 services:
   breedbase:
+    environment:
+      PGDATABASE: ${PGDATABASE:?}
+      PGHOST: ${PGHOST:?}
+      PGPASSWORD: ${PGPASSWORD:?}
+      PGUSER: ${PGUSER:?}
     volumes:
       - type: bind
         source: ./sgn_local.conf
