--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,11 @@ services:
       - type: bind
         source: ./sgn_local.conf
         target: /home/production/cxgn/sgn/sgn_local.conf
-      - type: bind
-        source: ./entrypoint.sh
-        target: /entrypoint.sh
-      - breedbase_volume:/home/production/breedbase_volume
+      - webdata:/home/production/volume
     ports:
       - 7080:8080
       - 25:25
-    image: breedbase/breedbase:v0.19
+    image: breedbase/breedbase:v0.21
     depends_on:
       - breedbase_db
     container_name: breedbase_web
@@ -29,12 +26,12 @@ services:
     image: postgres:12.6
     container_name: breedbase_db
     environment:
-      POSTGRES_DB: breedbase
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${PGDATABASE:?}
+      POSTGRES_PASSWORD: ${PGPASSWORD:?}
     healthcheck:
       test: "pg_isready -U postgres -d $${POSTGRES_DB} || exit 1"
       interval: 10s
 
 volumes:
-  breedbase_volume:
+  webdata:
   dbdata:
