Add docker-compose.test.yml to automate testing
Optimize Dockerfile by moving COPY directives after RUN directives to
maximize build cache reuse

Remove version fields from compose files (req. docker-compose >= 1.27.0)

Update git submodules

--- a/sgn_local.conf
+++ b/sgn_local.conf
@@ -85,7 +85,7 @@ ftpsite_root              /home/production/volume/public
 <DatabaseConnection sgn_test>
   dsn dbi:Pg:host=localhost;dbname=cxgn
   user postgres
-  password <your postgres user password>
+  password postgres
 
   search_path public
   search_path sgn
