Update breedbase to v0.27, sgn to 304.1, & solgenomics
Also need sgn PR 3624 to make tests work

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,9 +1,7 @@
 services:
   test_breedbase:
-    build:
-      context: .
-      cache_from:
-        - breedbase/breedbase:v0.25
+    image: breedbase/breedbase:v0.27
+    build: .
     environment:
       HOME: /root
       MODE: 'TESTING'
