Push image to Docker Hub instead of ghcr

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,15 +6,14 @@ on:
       - '**'
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: docker.io
+  IMAGE_NAME: breedbase/breedbase
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
 
     steps:
       - name: Checkout
@@ -22,12 +21,11 @@ jobs:
         with:
           submodules: true
 
-      - name: Log in to the GitHub Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
