remove deprecated configuration key.

--- a/slurm.conf
+++ b/slurm.conf
@@ -93,7 +93,7 @@ Waittime=0
 # 
 # SCHEDULING 
 #DefMemPerCPU=0 
-FastSchedule=1
+###FastSchedule=1 ### not compatible with new version of slurm
 #MaxMemPerCPU=0 
 #SchedulerRootFilter=1 
 #SchedulerTimeSlice=30 
@@ -139,10 +139,10 @@ JobCompType=jobcomp/none
 JobAcctGatherFrequency=30
 JobAcctGatherType=jobacct_gather/none
 SlurmctldDebug=3
-SlurmctldLogFile=/var/log/slurm-llnl/ctrl.log
+SlurmctldLogFile=/var/log/slurm/ctrl.log
 SlurmdDebug=3
 #SlurmdLogFile=
-SlurmSchedLogFile=/var/log/slurm-llnl/scheduler.log
+SlurmSchedLogFile=/var/log/slurm/scheduler.log
 #SlurmSchedLogLevel= 
 # 
 # 
