--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -23,6 +23,10 @@ services:
   selenium:
     container_name: selenium
     image: selenium/standalone-firefox-debug
+    volumes:
+      - type: bind
+        source: ./cxgn/sgn/t/data
+        target: /home/production/cxgn/sgn/t/data
     ports:
       - 5900:5900
       - 4444:4444
