limit maximum execution time MaxTime=15 minutes

--- a/slurm.conf
+++ b/slurm.conf
@@ -160,4 +160,4 @@ SlurmSchedLogFile=/var/log/slurm/scheduler.log
 # 
 # COMPUTE NODES
 NodeName=localhost NodeHostName=localhost CPUs=1 State=UNKNOWN
-PartitionName=localhost Nodes=localhost Default=YES MaxTime=INFINITE State=UP
+PartitionName=localhost Nodes=localhost Default=YES MaxTime=15 State=UP
