--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           submodules: true
 
+      - name: free disk space
+        run: |
+     	  sudo swapoff -a
+          sudo rm -f /swapfile
+          sudo apt clean
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
