--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,10 +22,7 @@ jobs:
           submodules: true
 
       - name: free disk space
-        run: |
-     	  sudo swapoff -a
-          sudo rm -f /swapfile
-          sudo apt clean
+        run: sudo swapoff -a; sudo rm -f /swapfile; sudo apt clean
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
