--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,9 +21,6 @@ jobs:
         with:
           submodules: true
 
-      - name: free disk space
-        run: sudo swapoff -a; sudo rm -f /swapfile; sudo apt clean
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -35,6 +32,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: free disk space
+        run: sudo swapoff -a; sudo rm -f /swapfile; sudo apt clean; rm -Rf /home/production/cxgn/sgn/.git
 
       - name: Build and push container image
         uses: docker/build-push-action@v2
