add a utility for maximizing disk space.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,6 +16,9 @@ jobs:
       contents: read
 
     steps:
+      - name: Maximize build disk space
+        uses: easimon/maximize-build-space@v8
+            
       - name: Checkout
         uses: actions/checkout@v2
         with:
