--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -18,13 +18,13 @@ jobs:
     steps:
       - name: Maximize build disk space
         uses: easimon/maximize-build-space@v8
-	with:
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-	  remove-codeql: 'true'
-	  remove-docker-images: 'true'
-	  
+        with:
+          remove-dotnet: true
+          remove-android: true
+          remove-haskell: true
+          remove-codeql: true
+          remove-docker-images: true
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
