--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Maximize build disk space
         uses: easimon/maximize-build-space@v8
         with:
+          tmp-pv-loop-path: '/mnt/tmp-pv.img'  
           remove-dotnet: true
           remove-android: true
           remove-haskell: true
