use different method to maximize disk space.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,16 +16,21 @@ jobs:
       contents: read
 
     steps:
-      - name: Maximize build disk space
-        uses: easimon/maximize-build-space@v8
-        with:
-          tmp-pv-loop-path: '/mnt/tmp-pv.img'  
-          remove-dotnet: true
-          remove-android: true
-          remove-haskell: true
-          remove-codeql: true
-          remove-docker-images: true
-
+    - name: Free Disk Space (Ubuntu)
+      uses: jlumbroso/free-disk-space@main
+      with:
+        # this might remove tools that are actually needed,
+        # when set to "true" but frees about 6 GB
+        tool-cache: true
+        
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: false
+        large-packages: false
+        swap-storage: false
+	  
       - name: Checkout
         uses: actions/checkout@v2
         with:
