--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 8080:8080
       - 25:25
-    image: breedbase/breedbase:v0.93
+    image: breedbase/breedbase:latest
     depends_on:
       - breedbase_db
     container_name: breedbase_web
