fix R_libs submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	url = https://github.com/solgenomics/perl-local-lib
 [submodule "cxgn/R_libs"]
 	path = cxgn/R_libs
-	url = https://github.com/solgenomics/R_libs
+	url = git@github.com:solgenomics/R_libs
 [submodule "cxgn/cassava"]
 	path = cxgn/cassava
 	url = https://github.com/solgenomics/cassava.git
