fix PERL5LIB path to use locally managed Bio-Chado-Schema repo.

--- a/starmachine.conf
+++ b/starmachine.conf
@@ -2,7 +2,7 @@ root_dir = /home/production/cxgn/starmachine
 
 env[CATALYST_CONFIG] = /etc/starmachine
 
-env[PERL5LIB] = /home/production/cxgn/biosource/lib:/home/production/cxgn/sgn/lib:/home/production/cxgn/cxgn-corelibs/lib:/home/production/cxgn/tomato_genome/lib:/home/production/cxgn/ITAG/lib:/home/production/cxgn/Cview/lib:/home/production/cxgn/Phenome/lib:/home/production/cxgn/local-lib/lib:/home/production/cxgn/local-lib/lib/perl5:/home/production/cxgn/local-lib/bin
+env[PERL5LIB] = /home/production/cxgn/Bio-Chado-Schema/lib:/home/production/cxgn/biosource/lib:/home/production/cxgn/sgn/lib:/home/production/cxgn/cxgn-corelibs/lib:/home/production/cxgn/tomato_genome/lib:/home/production/cxgn/ITAG/lib:/home/production/cxgn/Cview/lib:/home/production/cxgn/Phenome/lib:/home/production/cxgn/local-lib/lib:/home/production/cxgn/local-lib/lib/perl5:/home/production/cxgn/local-lib/bin
 sgn[env][CATALYST_CONFIG] = /home/production/cxgn/sgn/sgn.conf
 sgn[app_dir] = /home/production/cxgn/sgn
 sgn[psgi_file] = bin/sgn.psgi
